# ai_wechat_score

ai_wechat_scoring/: .env  .env.txt  github  github.pub  json_export.py  main.py  results.jsonl  results.xlsx  system_prompt_guihua.txt  system_prompt_xingzheng.txt
ai_wechat_scoring/__MACOSX/ai_wechat_scoring/: ._main.py  ._results.xlsx
ai_wechat_scoring/ai_wechat_scoring/: main.py  pyproject.toml  results.jsonl
ai_wechat_scoring/ai_wechat_scoring/xlsx/: 于翔-25申请.xlsx  周楷熠-25申请.xlsx  林曦-25申请.xlsx  王心然-25申请.xlsx  韦行健-25申请.xlsx  韩佳汝_2025申请.xlsx
ai_wechat_scoring/xlsx/: 叶恩琪-25申请.xlsx  杜浩宇-2025.xlsx  瞿士皓-25申请.xlsx  蒋博文_25申请.xlsx  马小哲-25申请.xlsx
