[tool.poetry]
name = "ai-wechat-scoring"
version = "0.1.0"
description = ""
authors = ["ethannovum <ethanbot@sina.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
openpyxl = "^3.1.5"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
